--- a/src/webui/main.html
+++ b/src/webui/main.html
@@ -444,12 +444,12 @@
                           <!-- Giving this the `control-group` class is a bit of a hack to get its error state working right. -->
                           <ul id="EgressRegion" class="control-group dropdown-menu f32" role="menu" style="display: block; position: static; margin-bottom: 5px; *width: 180px;">
                             <li data-region="BEST">
-                              <a tabindex="-1" href="#" class="flag unknown"
-                                 data-i18n="settings#egress-region#select-best-performance">
-                                Best Performance
-                              </a>
+                                <a tabindex="-1" href="#" class="flag unknown">
+                                  <strong data-i18n="settings#egress-region#select-best-performance">
+                                    Best Performance
+                                  </strong>
+                                </a>
                             </li>
-                            <li class="divider ie7Remove"></li>
                             <li data-region="US">
                               <a href="#" tabindex="-1" class="flag us"
                                  data-i18n="settings#egress-region#select-us">
